--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0"
   }
